[workspace.package]
edition = "2021"
default-run = "ethink-node"

[workspace]
members = [
    "client/rpc",
    "client/rpc-core",
    "client/mappings",
	"template/node",
	"template/runtime",
    "primitives/rpc",
    "primitives/account",
    "frame/ethink",
]
exclude = [ "dapp/contracts/flipper.ink" ]
resolver = "2"

[workspace.dependencies]
ethereum = { version = "0.14.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
jsonrpsee = "0.16.2"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
impl-serde = { version = "0.4.0", default-features = false }
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.19", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
rlp = { version = "0.5.2", default-features = false }
futures = "0.3.28"

# Substrate
sp-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sp-core = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sp-io = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sp-blockchain = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sp-runtime = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sp-runtime-interface = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sp-state-machine = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sp-std = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sc-client-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sc-transaction-pool-api = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sc-network = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
sc-network-common = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
pallet-contracts = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
pallet-contracts-primitives = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
pallet-balances = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
frame-support = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}
frame-system = { git = "https://github.com/agryaznov/polkadot-sdk", branch = "ethink", default-features = false}

# Local
ethink-rpc = { path = "client/rpc", default-features = false }
ethink-rpc-core = { path = "client/rpc-core", default-features = false }
mappings = { path = "client/mappings", default-features = false }
ep-rpc = { path = "primitives/rpc", default-features = false }
ep-account = { path = "primitives/account", default-features = false }
pallet-ethink = { path = "frame/ethink", default-features = false }
ep-self-contained = { path = "primitives/self-contained", default-features = false }
