[package]
name = "e2e-tests"
version = "0.1.0"
edition.workspace = true
description = "Integration tests for ethink!"

[dependencies]
ureq = { version = "2.9.6", features = ["json"] }
log.workspace = true
tokio = { version = "1.36", features = ["rt", "macros"] }
subxt = "0.29.0"

# Substrate
sp-keyring.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
