[package]
name = "mappings"
description = "ETH<>Polkadot SDK data structures mappings"
version = "0.1.0"
edition.workspace = true

[dependencies]

ethereum-types = { workspace = true }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

polkamask-rpc-core = { workspace = true }

[features]
default = []
