[package]
name = "ethink-rpc-core"
version = "0.3.1"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "RPC traits of Ethereum. This is a simplified fork of fc-rpc-core."
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-codec", "with-serde"] }
ethereum-types.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }
rustc-hex = "2.1.0"
serde.workspace = true
serde_json.workspace = true
