[package]
name = "ethink-rpc"
version = "0.3.1"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Ethereum RPC compatibility layer for pallet-contracts. This crate is derived from fc-rpc."
edition.workspace = true

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "macros"] }
hex.workspace = true
log.workspace = true
futures.workspace = true

# ethink
ethink-rpc-core.workspace = true
pallet-ethink = { workspace = true, features = ["default"] }
ep-eth = { workspace = true, features = ["default"] }

# Substrate
sp-io = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-keystore = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sc-client-api = { workspace = true, default-features = false }
sc-transaction-pool-api.workspace = true
sc-network.workspace = true
sc-network-common.workspace = true
sc-network-sync.workspace = true
pallet-balances.workspace = true
frame-support.workspace = true

[features]
default = []
runtime-benchmarks = [
	"pallet-ethink/runtime-benchmarks"
]
