[package]
name = "pallet-ethink"
version = "0.1.0"
license = "Apache-2.0"
description = "Ethereum RPC compatibility aid for pallet-contracts. This crate is derived from pallet-ethereum."
edition.workspace = true

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types.workspace = true
scale-codec.workspace = true
scale-info.workspace = true
# Substrate
frame-support.workspace = true
frame-system.workspace = true
sp-api.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-core.workspace = true
log.workspace = true

[dev-dependencies]
hex.workspace = true
libsecp256k1 = { workspace = true, features = ["static-context", "hmac"] }
rlp.workspace = true
wat = "1"
# Substrate
pallet-balances = { workspace = true, features = ["default"] }
pallet-contracts = { workspace = true, features = ["default"] }
pallet-contracts-primitives = { workspace = true, features = ["default"] }
pallet-utility = { workspace = true, features = ["default"] }
pallet-timestamp = { workspace = true, features = ["default"] }
pallet-transaction-payment = { workspace = true, features = ["default"] }
pallet-insecure-randomness-collective-flip = { workspace = true, features = ["default"] }
ep-crypto = { workspace = true, features = ["default"] }
ep-mapping = { workspace = true, features = ["default"] }
ep-eth = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }

[features]
default = ["std"]
std = [
	"ethereum-types/std",
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
