[package]
name = "pallet-ethink"
version = "0.3.1"
license = "Apache-2.0"
description = "Ethereum RPC compatibility aid for pallet-contracts. This crate is derived from pallet-ethereum."
edition.workspace = true

[dependencies]
ep-eth.workspace = true
scale-codec.workspace = true
scale-info.workspace = true
# Substrate
frame-support.workspace = true
frame-system.workspace = true
frame-benchmarking = { workspace = true, default-features = false }
sp-api.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-core.workspace = true
log.workspace = true
# TODO rm
hex.workspace = true
hex-literal.workspace = true

[dev-dependencies]
hex.workspace = true
libsecp256k1 = { workspace = true, features = ["static-context", "hmac"] }
rlp.workspace = true
wat = "1"
# Substrate
pallet-balances = { workspace = true, features = ["default"] }
pallet-contracts = { workspace = true, features = ["default"] }
pallet-utility = { workspace = true, features = ["default"] }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
ep-eth = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }

[features]
default = ["std"]
std = [
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-transaction-payment/std",
	"pallet-timestamp/std",
	# ethink
	"ep-eth/std",

]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",

]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
