[package]
name = "pallet-ethink"
version = "0.3.1"
license = "Apache-2.0"
description = "Ethereum RPC compatibility aid for pallet-contracts. This crate is derived from pallet-ethereum."
edition.workspace = true

[dependencies]
ep-eth.workspace = true
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
log.workspace = true
# TODO rm
hex.workspace = true
hex-literal.workspace = true

[dev-dependencies]
hex.workspace = true
libsecp256k1 = { workspace = true, features = ["static-context", "hmac"] }
rlp.workspace = true
wat = "1"
# Substrate
pallet-balances = { workspace = true, default-features = false }
pallet-contracts = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
ep-eth = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-transaction-payment/std",
	"pallet-timestamp/std",
	"pallet-contracts/std",
	"pallet-utility/std",
	# ethink
	"ep-eth/std",

]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",

]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
