[package]
name = "ep-eth"
version = "0.1.0"
license = "Apache-2.0"
description = "Ethereum primitives for ethink!"
authors.workspace = true
edition.workspace = true

[dependencies]
impl-serde.workspace = true
libsecp256k1.workspace = true
log.workspace = true
scale-codec.workspace = true
scale-info.workspace = true
ethereum = { workspace = true, features = ["with-codec"] }
serde = { workspace = true, optional = true }
hex.workspace = true
ethereum-types.workspace = true

# Substrate
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-runtime-interface.workspace = true
sp-std.workspace = true

# Ethink
ep-mapping.workspace = true

[features]
default = ["std"]
std = [
	"hex/std",
	"serde/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	"impl-serde/std",
	# Substrate
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"sp-std/std",
    # Ethink
    "ep-mapping/std",
]
serde = [
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
