[package]
name = "ep-mapping"
description = "ETH<>Polkadot SDK data types conversions."
version = "0.2.0"
edition.workspace = true

[dependencies]
sp-core = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	# Substrate
	"sp-core/std",
	"sp-weights/std",
]
