[package]
name = "ep-rpc"
version = "0.0.1"
license = "Apache-2.0"
description = "Runtime primitives for Ethereum RPC (web3) compatibility."
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types.workspace = true
evm = { workspace = true, features = ["with-codec"] }
scale-codec.workspace = true
scale-info.workspace = true

# Substrate
sp-api.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-state-machine.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"ethereum/std",
	"ethereum-types/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"sp-api/std",
	"sp-state-machine/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
serde = [
	"evm/with-serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
