[package]
name = "ep-rpc"
version = "0.1.0"
license = "Apache-2.0"
description = "Runtime primitives for Ethereum RPC (web3) compatibility."
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }

# Substrate
sp-api.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"ethereum/std",
	# Substrate
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
serde = [
	"sp-core/serde",
	"sp-runtime/serde",
]
